third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/call_ordering.exp

Diagnostics:
error: mutable reference in local `s` requires exclusive access
  ┌─ tests/reference-safety/v1-tests/call_ordering.move:7:13
  │
6 │         let f = &mut s.f;
  │                 -------- previous mutable field borrow
7 │         foo(freeze(s), { *f = 0; 1 })
  │             ^^^^^^^^^    ------ conflicting reference `f`used here
  │             │
  │             requirement enforced here
